--- a/project.srcs/sources_1/bd/top_level/ui/bd_7ad129ea.ui
+++ b/project.srcs/sources_1/bd/top_level/ui/bd_7ad129ea.ui
@@ -7,50 +7,64 @@
    "No Loops_ExpandedHierarchyInLayout":"",
    "No Loops_Layout":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port S_AXI_CTL -pg 1 -lvl 0 -x 0 -y 60 -defaultsOSRD
-preplace port AXIS_CH0 -pg 1 -lvl 4 -x 1180 -y 60 -defaultsOSRD -right
-preplace port m0_ddr4 -pg 1 -lvl 4 -x 1180 -y 100 -defaultsOSRD
-preplace port m0_ddr4_clk -pg 1 -lvl 4 -x 1180 -y 80 -defaultsOSRD -right
-preplace port AXI_DMA -pg 1 -lvl 4 -x 1180 -y 180 -defaultsOSRD -right
-preplace port port-id_clk -pg 1 -lvl 0 -x 0 -y 140 -defaultsOSRD
-preplace port port-id_resetn -pg 1 -lvl 0 -x 0 -y 160 -defaultsOSRD
-preplace port port-id_eth_resetn_out -pg 1 -lvl 0 -x 0 -y 260 -defaultsOSRD -left
-preplace port port-id_eth0_clk -pg 1 -lvl 4 -x 1180 -y 120 -defaultsOSRD -right
-preplace port port-id_qsfp0_status_async -pg 1 -lvl 0 -x 0 -y 180 -defaultsOSRD
-preplace port port-id_qsfp1_status_async -pg 1 -lvl 0 -x 0 -y 200 -defaultsOSRD
-preplace port port-id_qsfp2_status_async -pg 1 -lvl 0 -x 0 -y 220 -defaultsOSRD
-preplace port port-id_qsfp3_status_async -pg 1 -lvl 0 -x 0 -y 240 -defaultsOSRD
-preplace portBus led_l -pg 1 -lvl 0 -x 0 -y 280 -defaultsOSRD -left
-preplace inst channel_0 -pg 1 -lvl 2 -x 630 -y 60 -swap {0 1 2 3 4 5 21 7 8 9 10 11 12 13 14 15 16 17 18 19 20 6 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 66 64 65 67 68 69} -defaultsOSRD -pinDir AXIS_IN right -pinY AXIS_IN 0R -pinDir ddr4 right -pinY ddr4 40R -pinDir ddr4_clk right -pinY ddr4_clk 20R -pinDir RAM_AXI right -pinY RAM_AXI 120R -pinDir cmac_clk right -pinY cmac_clk 140R -pinDir sys_reset left -pinY sys_reset 0L -pinDir capture left -pinY capture 120L -pinDir erase_idle left -pinY erase_idle 20L -pinDir erase_ram left -pinY erase_ram 100L -pinDir init_calib_complete left -pinY init_calib_complete 140L -pinDir ram_clk right -pinY ram_clk 160R -pinBusDir ram_resetn_out right -pinBusY ram_resetn_out 180R
-preplace inst sys_control -pg 1 -lvl 1 -x 250 -y 60 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 38 28 29 30 31 32 33 24 25 26 27 34 23 35 36 37 39} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir clk left -pinY clk 80L -pinDir resetn left -pinY resetn 100L -pinDir sys_reset_out right -pinY sys_reset_out 0R -pinDir eth_resetn_out left -pinY eth_resetn_out 200L -pinDir erase_ram right -pinY erase_ram 100R -pinDir packet_gate right -pinY packet_gate 120R -pinDir bank0_calib_complete_async right -pinY bank0_calib_complete_async 140R -pinDir bank1_calib_complete_async right -pinY bank1_calib_complete_async 160R -pinDir bank2_calib_complete_async right -pinY bank2_calib_complete_async 180R -pinDir bank3_calib_complete_async right -pinY bank3_calib_complete_async 200R -pinDir bank0_erase_idle_async right -pinY bank0_erase_idle_async 20R -pinDir bank1_erase_idle_async right -pinY bank1_erase_idle_async 40R -pinDir bank2_erase_idle_async right -pinY bank2_erase_idle_async 60R -pinDir bank3_erase_idle_async right -pinY bank3_erase_idle_async 80R -pinBusDir window_addr right -pinBusY window_addr 220R -pinDir qsfp0_status_async left -pinY qsfp0_status_async 120L -pinDir qsfp1_status_async left -pinY qsfp1_status_async 140L -pinDir qsfp2_status_async left -pinY qsfp2_status_async 160L -pinDir qsfp3_status_async left -pinY qsfp3_status_async 180L -pinBusDir led_l left -pinBusY led_l 220L
-preplace inst dma_interconect -pg 1 -lvl 3 -x 1010 -y 180 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 188 182 181 189 178 179 180 185 183 186 184 187} -defaultsOSRD -pinDir S00_AXI right -pinY S00_AXI 0R -pinDir M00_AXI left -pinY M00_AXI 0L -pinDir M01_AXI right -pinY M01_AXI 20R -pinDir M02_AXI right -pinY M02_AXI 40R -pinDir M03_AXI right -pinY M03_AXI 60R -pinDir ACLK left -pinY ACLK 300L -pinDir ARESETN left -pinY ARESETN 180L -pinDir S00_ACLK left -pinY S00_ACLK 160L -pinDir S00_ARESETN left -pinY S00_ARESETN 320L -pinDir M00_ACLK left -pinY M00_ACLK 40L -pinDir M00_ARESETN left -pinY M00_ARESETN 60L -pinDir M01_ACLK left -pinY M01_ACLK 140L -pinDir M01_ARESETN left -pinY M01_ARESETN 240L -pinDir M02_ACLK left -pinY M02_ACLK 200L -pinDir M02_ARESETN left -pinY M02_ARESETN 260L -pinDir M03_ACLK left -pinY M03_ACLK 220L -pinDir M03_ARESETN left -pinY M03_ARESETN 280L
-preplace netloc channel_0_erase_idle 1 1 1 460 80n
-preplace netloc channel_0_init_calib_complete 1 1 1 460 200n
-preplace netloc channel_0_ram_clk 1 2 1 860J 220n
-preplace netloc channel_0_ram_resetn_out 1 2 1 840J 240n
-preplace netloc crossover_cmac0_clk 1 2 2 860 120 N
-preplace netloc pcie_axi_aclk 1 0 3 40J 340 N 340 820
-preplace netloc pcie_axi_aresetn 1 0 3 20J 360 N 360 800
-preplace netloc qsfp0_status_async_1 1 0 1 NJ 180
-preplace netloc qsfp1_status_async_1 1 0 1 NJ 200
-preplace netloc qsfp2_status_async_1 1 0 1 NJ 220
-preplace netloc qsfp3_status_async_1 1 0 1 NJ 240
-preplace netloc sys_control_0_erase_ram 1 1 1 N 160
-preplace netloc sys_control_0_led_l 1 0 1 N 280
-preplace netloc sys_control_0_packet_gate 1 1 1 N 180
-preplace netloc sys_control_0_sys_reset_out 1 1 1 N 60
-preplace netloc sys_control_eth_resetn_out 1 0 1 N 260
-preplace netloc AXI_DMA_1 1 3 1 N 180
-preplace netloc RAM_AXI_1 1 2 1 N 180
-preplace netloc channel_0_m0_ddr4 1 2 2 NJ 100 N
-preplace netloc crossover_rx0_out 1 2 2 N 60 N
-preplace netloc m0_ddr4_clk_1 1 2 2 N 80 N
-preplace netloc system_interconnect_M01_AXI 1 0 1 NJ 60
-levelinfo -pg 1 0 250 630 1010 1180
-pagesize -pg 1 -db -bbox -sgen -190 0 1320 560
+preplace port S_AXI_CTL -pg 1 -lvl 0 -x 0 -y 550 -defaultsOSRD
+preplace port AXIS_CH0 -pg 1 -lvl 3 -x 900 -y 80 -defaultsOSRD -right
+preplace port m0_ddr4 -pg 1 -lvl 3 -x 900 -y 60 -defaultsOSRD
+preplace port m0_ddr4_clk -pg 1 -lvl 3 -x 900 -y 100 -defaultsOSRD -right
+preplace port AXI_DMA -pg 1 -lvl 0 -x 0 -y 60 -defaultsOSRD
+preplace port AXIS_CH1 -pg 1 -lvl 3 -x 900 -y 330 -defaultsOSRD -right
+preplace port m1_ddr4_clk -pg 1 -lvl 3 -x 900 -y 310 -defaultsOSRD -right
+preplace port m1_ddr4 -pg 1 -lvl 3 -x 900 -y 290 -defaultsOSRD
+preplace port port-id_clk -pg 1 -lvl 0 -x 0 -y 390 -defaultsOSRD
+preplace port port-id_resetn -pg 1 -lvl 0 -x 0 -y 570 -defaultsOSRD
+preplace port port-id_eth_resetn_out -pg 1 -lvl 0 -x 0 -y 610 -defaultsOSRD -left
+preplace port port-id_eth0_clk -pg 1 -lvl 3 -x 900 -y 120 -defaultsOSRD -right
+preplace port port-id_qsfp0_status_async -pg 1 -lvl 0 -x 0 -y 630 -defaultsOSRD
+preplace port port-id_qsfp1_status_async -pg 1 -lvl 0 -x 0 -y 650 -defaultsOSRD
+preplace port port-id_qsfp2_status_async -pg 1 -lvl 0 -x 0 -y 670 -defaultsOSRD
+preplace port port-id_qsfp3_status_async -pg 1 -lvl 0 -x 0 -y 690 -defaultsOSRD
+preplace port port-id_eth1_clk -pg 1 -lvl 3 -x 900 -y 350 -defaultsOSRD -right
+preplace portBus led_l -pg 1 -lvl 0 -x 0 -y 710 -defaultsOSRD -left
+preplace inst channel_0 -pg 1 -lvl 2 -x 730 -y 60 -swap {5 1 2 3 4 0 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 63 64 60 62 61 58 59} -defaultsOSRD -pinDir AXIS_IN right -pinY AXIS_IN 20R -pinDir ddr4 right -pinY ddr4 0R -pinDir ddr4_clk right -pinY ddr4_clk 40R -pinDir RAM_AXI left -pinY RAM_AXI 0L -pinDir cmac_clk right -pinY cmac_clk 60R -pinDir sys_reset left -pinY sys_reset 120L -pinDir capture left -pinY capture 140L -pinDir erase_idle left -pinY erase_idle 60L -pinDir erase_ram left -pinY erase_ram 100L -pinDir init_calib_complete left -pinY init_calib_complete 80L -pinDir ram_clk left -pinY ram_clk 20L -pinBusDir ram_resetn_out left -pinBusY ram_resetn_out 40L
+preplace inst sys_control -pg 1 -lvl 1 -x 250 -y 550 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 30 23 28 31 29 33 26 27 24 32 22 25 34 35 36 37 38 39} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir clk left -pinY clk 20L -pinDir resetn left -pinY resetn 40L -pinDir sys_reset_out right -pinY sys_reset_out 140R -pinDir eth_resetn_out left -pinY eth_resetn_out 60L -pinDir erase_ram right -pinY erase_ram 100R -pinDir packet_gate right -pinY packet_gate 160R -pinDir bank0_calib_complete_async right -pinY bank0_calib_complete_async 120R -pinDir bank1_calib_complete_async right -pinY bank1_calib_complete_async 200R -pinDir bank2_calib_complete_async right -pinY bank2_calib_complete_async 60R -pinDir bank3_calib_complete_async right -pinY bank3_calib_complete_async 80R -pinDir bank0_erase_idle_async right -pinY bank0_erase_idle_async 20R -pinDir bank1_erase_idle_async right -pinY bank1_erase_idle_async 180R -pinDir bank2_erase_idle_async right -pinY bank2_erase_idle_async 0R -pinDir bank3_erase_idle_async right -pinY bank3_erase_idle_async 40R -pinBusDir window_addr right -pinBusY window_addr 220R -pinDir qsfp0_status_async left -pinY qsfp0_status_async 80L -pinDir qsfp1_status_async left -pinY qsfp1_status_async 100L -pinDir qsfp2_status_async left -pinY qsfp2_status_async 120L -pinDir qsfp3_status_async left -pinY qsfp3_status_async 140L -pinBusDir led_l left -pinBusY led_l 160L
+preplace inst dma_interconect -pg 1 -lvl 1 -x 250 -y 60 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 142 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 72 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 106 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 180 179 181 182 185 189 188 183 186 184 187} -defaultsOSRD -pinDir S00_AXI left -pinY S00_AXI 0L -pinDir M00_AXI right -pinY M00_AXI 0R -pinDir M01_AXI right -pinY M01_AXI 230R -pinDir M02_AXI right -pinY M02_AXI 20R -pinDir M03_AXI right -pinY M03_AXI 40R -pinDir ACLK left -pinY ACLK 330L -pinDir ARESETN left -pinY ARESETN 370L -pinDir S00_ACLK left -pinY S00_ACLK 350L -pinDir S00_ARESETN left -pinY S00_ARESETN 390L -pinDir M00_ACLK right -pinY M00_ACLK 250R -pinDir M00_ARESETN right -pinY M00_ARESETN 310R -pinDir M01_ACLK right -pinY M01_ACLK 390R -pinDir M01_ARESETN right -pinY M01_ARESETN 370R -pinDir M02_ACLK right -pinY M02_ACLK 270R -pinDir M02_ARESETN right -pinY M02_ARESETN 330R -pinDir M03_ACLK right -pinY M03_ACLK 290R -pinDir M03_ARESETN right -pinY M03_ARESETN 350R
+preplace inst channel_1 -pg 1 -lvl 2 -x 730 -y 290 -swap {20 1 2 3 4 0 6 7 8 9 10 11 12 13 14 15 16 17 18 19 5 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 61 62 63 60 64 59 58} -defaultsOSRD -pinDir AXIS_IN right -pinY AXIS_IN 40R -pinDir ddr4 right -pinY ddr4 0R -pinDir ddr4_clk right -pinY ddr4_clk 20R -pinDir RAM_AXI left -pinY RAM_AXI 0L -pinDir cmac_clk right -pinY cmac_clk 60R -pinDir sys_reset left -pinY sys_reset 200L -pinDir capture left -pinY capture 220L -pinDir erase_idle left -pinY erase_idle 440L -pinDir erase_ram left -pinY erase_ram 180L -pinDir init_calib_complete left -pinY init_calib_complete 460L -pinDir ram_clk left -pinY ram_clk 160L -pinBusDir ram_resetn_out left -pinBusY ram_resetn_out 140L
+preplace netloc channel_0_erase_idle 1 1 1 500 120n
+preplace netloc channel_0_init_calib_complete 1 1 1 520 140n
+preplace netloc channel_0_ram_clk 1 1 1 460 80n
+preplace netloc channel_0_ram_resetn_out 1 1 1 480 100n
+preplace netloc crossover_cmac0_clk 1 2 1 N 120
+preplace netloc pcie_axi_aclk 1 0 1 40 390n
+preplace netloc pcie_axi_aresetn 1 0 1 20 430n
+preplace netloc qsfp0_status_async_1 1 0 1 NJ 630
+preplace netloc qsfp1_status_async_1 1 0 1 NJ 650
+preplace netloc qsfp2_status_async_1 1 0 1 NJ 670
+preplace netloc qsfp3_status_async_1 1 0 1 NJ 690
+preplace netloc sys_control_0_erase_ram 1 1 1 540 160n
+preplace netloc sys_control_0_led_l 1 0 1 NJ 710
+preplace netloc sys_control_0_packet_gate 1 1 1 580 200n
+preplace netloc sys_control_0_sys_reset_out 1 1 1 560 180n
+preplace netloc sys_control_eth_resetn_out 1 0 1 NJ 610
+preplace netloc cmac_clk_1 1 2 1 N 350
+preplace netloc channel_1_init_calib_complete 1 1 1 N 750
+preplace netloc channel_1_ram_resetn_out 1 1 1 N 430
+preplace netloc channel_1_ram_clk 1 1 1 N 450
+preplace netloc channel_1_erase_idle 1 1 1 N 730
+preplace netloc AXI_DMA_1 1 0 1 N 60
+preplace netloc RAM_AXI_1 1 1 1 N 60
+preplace netloc channel_0_m0_ddr4 1 2 1 NJ 60
+preplace netloc crossover_rx0_out 1 2 1 NJ 80
+preplace netloc m0_ddr4_clk_1 1 2 1 NJ 100
+preplace netloc system_interconnect_M01_AXI 1 0 1 NJ 550
+preplace netloc AXIS_CH1_1 1 2 1 N 330
+preplace netloc m1_ddr4_clk_1 1 2 1 N 310
+preplace netloc RAM_AXI_2 1 1 1 N 290
+preplace netloc channel_1_ddr4 1 2 1 NJ 290
+levelinfo -pg 1 0 250 730 900
+pagesize -pg 1 -db -bbox -sgen -190 0 1040 830
 ",
-   "No Loops_ScaleFactor":"0.997349",
-   "No Loops_TopLeft":"-188,-63",
+   "No Loops_ScaleFactor":"0.824096",
+   "No Loops_TopLeft":"-488,0",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
 preplace port S_AXI -pg 1 -lvl 0 -x 0 -y 50 -defaultsOSRD
